# ns.classgen

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  billing.py  commands.py  curriculum.py  db.py  docker-compose.yml  homework.html  i18n.py  index.html  init.sql  jobs.py  main.py  messaging.py  notifications.py  pdf_generator.py  pyproject.toml  pyrightconfig.json  results.html  terms.html  utils.py  worksheet.py
.github/workflows/: ci.yml  deploy.yml
.mock/e2e/: __main__.py  cli.py  parity.py  report.py  web_client.py
.mock/twilio-api/: __main__.py  cli.py  simulator.py  transcript.py  twiml_parser.py
assets/: app.css  app.js
deploy/: .env.prod.example  Caddyfile  README.md  deploy.py  deploy.sh  docker-compose.nginx-proxy.yml  docker-compose.prod.yml  docker-compose.test.yml
docs/: BUILD.md  DATABASE.md  DEPLOYMENT.md  DESIGN-v4-structured-output.md  ROADMAP.md
migrations/: 001_baseline.sql  002_add_updated_at.sql  003_add_lesson_json.sql  004_add_onboarded_at.sql  005_add_country.sql  006_create_supported_countries.sql  007_homework_subject_seq.sql  runner.py
scratch/prompts/: README.md
scratch/sql/: README.md
scratch/ui/: README.md
site/: index.html
spec/: mvp_spec.txt  tech_stack.txt
src/classgen/: __init__.py  (+1 more)
static/: sw.js
templates/: admin.html  base.html  index.html  profile.html
tests/: conftest.py  e2e_simulator.py  fixtures.py  test_backward_compat.py  test_block_detail_rendering.py  test_channels.py  test_commands.py  test_country.py  test_data_layer.py  test_deploy.py  test_feature_flags.py  test_frontend_notifications.py  test_homework_codes_mnemonic.py  test_imports.py  test_integration.py  test_llm_json.py  test_main.py  test_models.py  test_onboarding.py  test_parsers.py  test_pdf.py  test_pdf_security.py  test_streaming.py  test_utils.py  test_wa_flows.py  test_webhook.py
(+64 files in other folders)
