[project]
name = "classgen"
version = "1.1.0"
description = "AI lesson activity generator for Nigerian secondary school teachers"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135",
    "uvicorn>=0.41",
    "openai>=2.24",
    "supabase>=2.28",
    "twilio>=9.10",
    "fpdf2>=2.8",
    "python-dotenv>=1.2",
    "python-multipart>=0.0.22",
]

[dependency-groups]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=1.3",
    "pytest-cov>=7.0",
    "httpx>=0.28",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
